[gd_scene load_steps=19 format=3 uid="uid://c1bmeuxxfnnkr"]

[ext_resource type="Script" path="res://scripts/sliding_puzzle.gd" id="1_oy4l6"]
[ext_resource type="Texture2D" uid="uid://ccyy4vmualhhu" path="res://sprites-puzzle/Tile1.png" id="3_12g0q"]
[ext_resource type="Texture2D" uid="uid://cwego1tn0ffck" path="res://sprites-puzzle/Tile2.png" id="4_cwn22"]
[ext_resource type="Texture2D" uid="uid://v1upcyo4al03" path="res://sprites-puzzle/Tile3.png" id="5_va4rh"]
[ext_resource type="Texture2D" uid="uid://bn7m10aarv3np" path="res://sprites-puzzle/Tile4.png" id="6_lhf5j"]
[ext_resource type="Texture2D" uid="uid://dn8ccaaau1lxd" path="res://sprites-puzzle/Tile6.png" id="7_lmfr2"]
[ext_resource type="Texture2D" uid="uid://d1imhfqgbe604" path="res://sprites-puzzle/Tile5.png" id="7_mc2a2"]
[ext_resource type="Texture2D" uid="uid://bhabryy47k866" path="res://sprites-puzzle/Tile7.png" id="8_er8xe"]
[ext_resource type="Texture2D" uid="uid://c1vxvyh7rcay" path="res://sprites-puzzle/Tile8.png" id="9_hq5m8"]
[ext_resource type="Texture2D" uid="uid://cla76eprcf6ro" path="res://sprites-puzzle/Tile9.png" id="10_85nff"]
[ext_resource type="Texture2D" uid="uid://ddphft0iif4sx" path="res://sprites-puzzle/Tile10.png" id="11_gnwah"]
[ext_resource type="Texture2D" uid="uid://lomqyc0icogm" path="res://sprites-puzzle/Tile11.png" id="12_x54nw"]
[ext_resource type="Texture2D" uid="uid://dv6n1062qtrgl" path="res://sprites-puzzle/Tile12.png" id="13_i8t06"]
[ext_resource type="Texture2D" uid="uid://euwqnibtm1fk" path="res://sprites-puzzle/Tile13.png" id="14_0lvp2"]
[ext_resource type="Texture2D" uid="uid://bjqsm7nje4c35" path="res://sprites-puzzle/Tile14.png" id="15_1wd71"]
[ext_resource type="Texture2D" uid="uid://b4gcotgqtkwb3" path="res://sprites-puzzle/Tile15.png" id="16_v6ui6"]
[ext_resource type="Texture2D" uid="uid://csn8jjfh6nc0" path="res://sprites-puzzle/Tile16.png" id="17_i255n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wly4d"]

[node name="SlidingPuzzle" type="Area2D"]
script = ExtResource("1_oy4l6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wly4d")

[node name="Tile1" type="Sprite2D" parent="."]
position = Vector2(45, 45)
texture = ExtResource("3_12g0q")

[node name="Tile2" type="Sprite2D" parent="."]
position = Vector2(135, 45)
texture = ExtResource("4_cwn22")

[node name="Tile3" type="Sprite2D" parent="."]
position = Vector2(225, 45)
texture = ExtResource("5_va4rh")

[node name="Tile4" type="Sprite2D" parent="."]
position = Vector2(315, 45)
texture = ExtResource("6_lhf5j")

[node name="Tile5" type="Sprite2D" parent="."]
position = Vector2(45, 135)
texture = ExtResource("7_mc2a2")

[node name="Tile6" type="Sprite2D" parent="."]
position = Vector2(135, 135)
texture = ExtResource("7_lmfr2")

[node name="Tile7" type="Sprite2D" parent="."]
position = Vector2(225, 135)
texture = ExtResource("8_er8xe")

[node name="Tile8" type="Sprite2D" parent="."]
position = Vector2(315, 135)
texture = ExtResource("9_hq5m8")

[node name="Tile9" type="Sprite2D" parent="."]
position = Vector2(45, 225)
texture = ExtResource("10_85nff")

[node name="Tile10" type="Sprite2D" parent="."]
position = Vector2(135, 225)
texture = ExtResource("11_gnwah")

[node name="Tile11" type="Sprite2D" parent="."]
position = Vector2(225, 225)
texture = ExtResource("12_x54nw")

[node name="Tile12" type="Sprite2D" parent="."]
position = Vector2(315, 225)
texture = ExtResource("13_i8t06")

[node name="Tile13" type="Sprite2D" parent="."]
position = Vector2(45, 315)
texture = ExtResource("14_0lvp2")

[node name="Tile14" type="Sprite2D" parent="."]
position = Vector2(135, 315)
texture = ExtResource("15_1wd71")

[node name="Tile15" type="Sprite2D" parent="."]
position = Vector2(225, 315)
texture = ExtResource("16_v6ui6")

[node name="Tile16" type="Sprite2D" parent="."]
position = Vector2(315, 315)
scale = Vector2(0.36, 0.36)
texture = ExtResource("17_i255n")
